# devops-engineer-from-scratch-project-313

./: Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
paas/scripts/: app.py
paas/tests/: __init__.py  ping_test.py
scripts/: __init__.py  app.py  main.py
